--- a/index.html
+++ b/index.html
@@ -14,6 +14,72 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <!-- <h1>My Resume</h1> -->
+
+  <div class="static-navbar">
+
+    <nav>
+
+      <a href="#">Home</a>
+
+      <a href="#">About</a>
+
+      <a href="#">Portfolio</a>
+
+      <a href="#">Contact</a>
+
+    </nav>
+
+  </div>
+  
+  <div class="website-wrapper">
+
+    <header>
+
+      <img src="travel.jpg" alt="travel">
+
+      <div class="name-intro">
+
+        <h1>
+          Kenya Alston - Web Dev
+        </h1>
+        <h2>
+          Technology is my jam!
+        </h2>
+
+      </div>
+
+      <div class="bio-section">
+        <p>
+          Occasionally I have time to work on side projects, if you're intereseted, let me know by signing up on this website.
+        </p>  
+        <button>Lets Team Up</button>
+      </div>
+    </header>
+    <section class="the-body">
+     <div class="you-text">
+        <h3>
+         Listen Up...
+        </h3>
+       <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+       </p>
+     </div>
+     <div class="fun-content">
+       <h3>
+         Stuff I'm Good At:
+       </h3>
+       <ul>
+          <li>Traveling</li>
+          <li>Playing Video Games</li>
+          <li>Learning Langauges</li>
+          <li>Taking Long Naps</li>
+          <li>Much More</li>
+        </ul>
+     </div>
+    </section>
+    <section class="footer">
+      <h2>Work History</h2>
+    </section>
 </body>
 </html>
