--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
 
   <title>My Resume</title>
@@ -80,6 +81,23 @@
     </section>
     <section class="footer">
       <h2>Work History</h2>
+      <table id="work">
+        <tr> 
+          <th>Firstname</th>
+          <th>Lastname</th> 
+          <th>Age</th>
+        </tr>
+        <tr>
+          <td>Jill</td>
+          <td>Smith</td> 
+          <td>50</td>
+        </tr>
+        <tr>
+          <td>Eve</td>
+          <td>Jackson</td> 
+          <td>94</td>
+        </tr>
+       </table> 
     </section>
 </body>
 </html>
